--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,6 @@
 }
 
 :root {
-  /* --background-color: #031540;
-  --text-color: #fff;
-  --second-text-color: #00abf0; */
   --background-color: rgb(6, 53, 27);
   --text-color: #fff;
   --second-text-color: seagreen;
@@ -267,4 +264,118 @@ footer p {
   color: var(--text-color);
   padding: 0 10%;
   font-size: 16px;
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    padding: 15px 20px;
+  }
+
+  .logo {
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  .navbar a {
+    font-size: 16px;
+    font-weight: 600;
+    margin-left: 30px;
+  }
+
+  .welcome {
+    height: 100vh;
+    background: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10%;
+  }
+
+  .welcome-image {
+    display: flex;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
+    margin: 120px auto 40px;
+    border: none;
+    border-radius: 50%;
+  }
+
+  .welcome-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0;
+    border: none;
+  }
+
+  .welcome-content {
+    text-align: center;
+  }
+
+  .welcome-content h1 {
+    font-size: 35px;
+  }
+
+  .welcome-content h3 {
+    font-size: 30px;
+  }
+
+  .welcome-content p {
+    font-size: 14px;
+  }
+
+  .btn {
+    font-size: 15px;
+  }
+
+  .projects h1 {
+    font-size: 35px;
+  }
+
+  .projects-grid {
+    grid-gap: 3rem;
+  }
+
+  .project {
+    height: 350px;
+  }
+
+  .project-title {
+    font-size: 20px;
+  }
+
+  .btn2 {
+    font-size: 15px;
+  }
+
+  .links {
+    scroll-margin-top: 110px;
+  }
+
+  .links h1 {
+    font-size: 35px;
+  }
+
+  .contact-links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .contact-links a {
+    margin: 11px;
+  }
+
+  footer {
+    height: 100px;
+  }
+
+  footer p {
+    padding: 0 10px;
+    font-size: 12px;
+    text-align: center;
+  }
+
 }
