--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -13,38 +19,233 @@
   --second-text-color: seagreen;
 }
 
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+nav {
+  display: flex;
+  align-items: center;
   padding: 20px 10%;
   background-color: var(--second-text-color);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
   z-index: 100;
 }
 
+/* nav {
+  display: flex;
+  align-items: center;
+  padding: 5px 20px;
+  background: #cccccc;
+  width: 100%;
+  position: fixed;
+  margin-top: 34px;
+} */
+
 .logo {
+  flex: 1;
+}
+
+.logo a {
+  display: flex;
+  align-items: center;
   font-size: 25px;
   font-weight: 700;
   color: var(--background-color);
   text-decoration: none;
 }
 
-.navbar a {
+.menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.menu li {
+  padding: 15px 10px;
+  font-size: 16px;
+}
+
+.menu a {
   font-size: 18px;
   text-decoration: none;
   color: var(--text-color);
   font-weight: 600;
   margin-left: 35px;
   transition: .3s;
+  position: relative;
 }
 
-.navbar a:hover {
+.menu a:hover {
   color: var(--background-color);
 }
+
+.toggle {
+  font-size: 30px;
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  nav {
+    display: flex;
+    position: absolute;
+    padding: 15px 20px;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    height: 70px;
+  }
+
+  .menu {
+    position: relative;
+    margin-top: 15px;
+    display: none;
+  }
+
+  .menu.active,
+  .toggle {
+    display: block;
+  }
+
+  .toggle {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+  }
+
+  .menu li {
+    position: relative;
+  }
+
+  .toggle a {
+    color: var(--background-color);
+  }
+}
+
+
+/* nav {
+  display: flex;
+  align-items: center;
+  padding: 5px 20px;
+  background: #cccccc;
+  width: 100%;
+  position: fixed;
+  margin-top: 34px;
+}
+
+@media screen and (min-width: 800px) {
+  nav {
+    height: 70px;
+  }
+}
+
+nav a {
+  color: black;
+  transition: all 0.3s ease 0s;
+  font-weight: bold;
+}
+
+.logo {
+  flex: 1;
+}
+
+.logo a {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: #990f02;
+}
+
+.logo a:hover {
+  color: #80130a;
+}
+
+.logo img {
+  width: 40px;
+  margin-right: 10px;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.menu li {
+  padding: 15px 10px;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
+
+.menu a {
+  transition: color 0.3s ease 0s;
+}
+
+.nav-link {
+  position: relative;
+} 
+
+.nav-link::after {
+  background: none repeat scroll 0 0 transparent;
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #990f02;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+}
+
+.nav-link:hover::after {
+  background-color: #990f02;
+  width: 100%;
+  left: 0;
+}
+
+nav a:hover {
+  color: #990f02;
+}
+
+.toggle {
+  font-size: 30px;
+  display: none;
+}
+
+
+@media screen and (max-width: 600px) {
+
+  nav {
+    display: block;
+    padding: 15px 20px;
+    width: 100%;
+    position: fixed;
+    top: 30;
+    z-index: 1000;
+  }
+
+  .menu {
+    margin-top: 15px;
+    display: none;
+  }
+
+  .menu.active,
+  .toggle {
+    display: block;
+  }
+
+  .toggle {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+  }
+
+} */
+
+
+
+
+
 
 .welcome {
   height: 100vh;
@@ -267,7 +468,7 @@ footer p {
 }
 
 @media screen and (max-width: 600px) {
-  .header {
+  nav {
     padding: 15px 20px;
   }
 
@@ -276,7 +477,7 @@ footer p {
     font-weight: 600;
   }
 
-  .navbar a {
+  .menu a {
     font-size: 16px;
     font-weight: 600;
     margin-left: 30px;
@@ -297,7 +498,7 @@ footer p {
     justify-content: center;
     width: 150px;
     height: 150px;
-    margin: 120px auto 40px;
+    margin: 80px auto 40px;
     border: none;
     border-radius: 50%;
   }
