--- a/styles.css
+++ b/styles.css
@@ -22,23 +22,13 @@
 nav {
   display: flex;
   align-items: center;
-  padding: 20px 10%;
+  padding: 5px 20px;
   background-color: var(--second-text-color);
   width: 100%;
   position: fixed;
-  top: 0;
-  z-index: 100;
+  /* top: 0;
+  z-index: 100; */
 }
-
-/* nav {
-  display: flex;
-  align-items: center;
-  padding: 5px 20px;
-  background: #cccccc;
-  width: 100%;
-  position: fixed;
-  margin-top: 34px;
-} */
 
 .logo {
   flex: 1;
@@ -78,6 +68,10 @@ nav {
   color: var(--background-color);
 }
 
+.nav-link {
+  position: relative;
+}
+
 .toggle {
   font-size: 30px;
   display: none;
@@ -85,17 +79,16 @@ nav {
 
 @media screen and (max-width: 600px) {
   nav {
-    display: flex;
-    position: absolute;
+    display: block;
     padding: 15px 20px;
     width: 100%;
+    position: fixed;
     top: 0;
     z-index: 1000;
-    height: 70px;
+    height: 67px;
   }
 
   .menu {
-    position: relative;
     margin-top: 15px;
     display: none;
   }
@@ -119,133 +112,6 @@ nav {
     color: var(--background-color);
   }
 }
-
-
-/* nav {
-  display: flex;
-  align-items: center;
-  padding: 5px 20px;
-  background: #cccccc;
-  width: 100%;
-  position: fixed;
-  margin-top: 34px;
-}
-
-@media screen and (min-width: 800px) {
-  nav {
-    height: 70px;
-  }
-}
-
-nav a {
-  color: black;
-  transition: all 0.3s ease 0s;
-  font-weight: bold;
-}
-
-.logo {
-  flex: 1;
-}
-
-.logo a {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  color: #990f02;
-}
-
-.logo a:hover {
-  color: #80130a;
-}
-
-.logo img {
-  width: 40px;
-  margin-right: 10px;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
-
-.menu li {
-  padding: 15px 10px;
-  font-size: 16px;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-}
-
-.menu a {
-  transition: color 0.3s ease 0s;
-}
-
-.nav-link {
-  position: relative;
-} 
-
-.nav-link::after {
-  background: none repeat scroll 0 0 transparent;
-  position: absolute;
-  left: 50%;
-  bottom: -10px;
-  content: "";
-  display: block;
-  width: 0;
-  height: 2px;
-  background: #990f02;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-}
-
-.nav-link:hover::after {
-  background-color: #990f02;
-  width: 100%;
-  left: 0;
-}
-
-nav a:hover {
-  color: #990f02;
-}
-
-.toggle {
-  font-size: 30px;
-  display: none;
-}
-
-
-@media screen and (max-width: 600px) {
-
-  nav {
-    display: block;
-    padding: 15px 20px;
-    width: 100%;
-    position: fixed;
-    top: 30;
-    z-index: 1000;
-  }
-
-  .menu {
-    margin-top: 15px;
-    display: none;
-  }
-
-  .menu.active,
-  .toggle {
-    display: block;
-  }
-
-  .toggle {
-    position: absolute;
-    top: 15px;
-    right: 20px;
-  }
-
-} */
-
-
-
-
-
 
 .welcome {
   height: 100vh;
@@ -578,5 +444,4 @@ footer p {
     font-size: 12px;
     text-align: center;
   }
-
 }
